Arch for Client

--- a/UI/Searching.UI.WinClient/MainPage.xaml
+++ b/UI/Searching.UI.WinClient/MainPage.xaml
@@ -15,7 +15,7 @@
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait"  Orientation="Portrait"
-    shell:SystemTray.IsVisible="True" Loaded="PhoneApplicationPage_Loaded">
+    shell:SystemTray.IsVisible="True" Loaded="PhoneApplicationPage_Loaded" BackKeyPress="PhoneApplicationPage_BackKeyPress" >
 
     <phone:PhoneApplicationPage.Resources>
         <local:MyListDataSelector x:Key="selector"/>
@@ -64,7 +64,7 @@
                 <Style x:Key="DataBoundListBoxCheckBoxStyle" TargetType="telerikPrimitives:ItemCheckBox">
                     <Setter Property="VerticalAlignment" Value="Center"/>
                 </Style>
-                <DataTemplate x:Key="tTemplate">
+                <DataTemplate x:Key="DataBoundListBoxItemTemplateAnn" x:Name="AnnouncingTemplate">
                     <Grid Margin="0,0,0,12">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
@@ -72,8 +72,8 @@
                         </Grid.ColumnDefinitions>
                         <Image Width="99" Height="99" Source="{Binding ImageThumbnailSource}"/>
                         <StackPanel Margin="12,-14,0,0" Grid.Column="1">
-                            <TextBlock x:Name="NameCategories" FontSize="{StaticResource PhoneFontSizeExtraLarge}" FontFamily="{StaticResource PhoneFontFamilySemiLight}" Text="{Binding Name_Category}" TextWrapping="Wrap"/>
-                            <!--<TextBlock FontSize="{StaticResource PhoneFontSizeNormal}" Text="{Binding Info_Category}" TextWrapping="Wrap"/>-->
+                            <TextBlock x:Name="NameCategories" FontSize="{StaticResource PhoneFontSizeExtraLarge}" FontFamily="{StaticResource PhoneFontFamilySemiLight}" Text="{Binding Name_Announcing}" TextWrapping="Wrap"/>
+                            <TextBlock FontSize="{StaticResource PhoneFontSizeNormal}" Text="{Binding Info_Announcing}" TextWrapping="Wrap"/>
                         </StackPanel>
                     </Grid>
                 </DataTemplate>
@@ -92,7 +92,7 @@
                 <phone:PivotItem Header="Категории" Name="CategoryItem">
                     <!--Double line list with text wrapping-->
                     <StackPanel x:Name="CategoriesPanel" Tag="1" >
-                            <Grid Height="97" Visibility="Visible">
+                            <Grid Height="97" Visibility="Visible" Name="CategoriesGrid">
                                 <telerikPrimitives:RadTextBox x:Name="radTextBox1" HorizontalAlignment="Left" Margin="0,-4,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="329" Height="72"/>
                                 <Button x:Name="button1" Content="Фильтр" HorizontalAlignment="Left" Margin="329,-4,0,29" Width="127" RenderTransformOrigin="0.421,0.5" BorderBrush="{StaticResource PhoneBackgroundBrush}" Click="button1_Click">
                                     <Button.Background>
@@ -102,14 +102,22 @@
 
 
 
-                                <telerikPrimitives:RadBusyIndicator x:Name="LoadIndicator" IsRunning='True' AnimationStyle="AnimationStyle8" Foreground="#FF2D87D3" RenderTransformOrigin="0.496,0.295" Margin="0,171,0,-411" />
+                                <telerikPrimitives:RadBusyIndicator x:Name="LoadIndicator" IsRunning='True' AnimationStyle="AnimationStyle8" Foreground="#FF2D87D3" RenderTransformOrigin="0.496,0.295" Margin="0,171,0,-411" Content="Загрузка..." />
                                 <telerikPrimitives:RadDataBoundListBox x:Name="CategoriesListBox"
                     			ItemsSource="{Binding }"
                     			IsCheckModeEnabled="True"	
                     			CheckBoxStyle="{StaticResource DataBoundListBoxCheckBoxStyle}"
                     			ItemTemplate="{StaticResource DataBoundListBoxItemTemplate}" ItemTap="DataBoundListBox1_ItemTap" EmptyContent="" Margin="10,102,7,-459"/>
                             </Grid>
-                           
+                            <Grid Visibility="Collapsed" Name="AnnouncingGrid">
+                                <telerikPrimitives:RadDataBoundListBox x:Name="AnnouncingListBox" 
+                                                                       ItemsSource="{Binding}" 
+                                                                       ItemTemplate="{StaticResource DataBoundListBoxItemTemplateAnn}"
+                                                                       Margin="0,0,-6,-561"
+                                                                       EmptyContent=""/>
+                            </Grid>
+                            
+
                         </StackPanel>
 
                 </phone:PivotItem>
