--- a/UI/Searching.UI.WinClient/App.xaml
+++ b/UI/Searching.UI.WinClient/App.xaml
@@ -3,19 +3,21 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"       
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
+    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
+    xmlns:CaliburnMicro="clr-namespace:Searching.UI.WinClient.Helper">
 
     <!--Application Resources-->
     <Application.Resources>
-        <local:LocalizedStrings xmlns:local="clr-namespace:Searching.UI.WinClient" x:Key="LocalizedStrings"/>
+        <!--<local:LocalizedStrings xmlns:local="clr-namespace:Searching.UI.WinClient" x:Key="LocalizedStrings"/>-->
+        <CaliburnMicro:Bootstrapper x:Key="bootsrapper"/>
     </Application.Resources>
     
-    <Application.ApplicationLifetimeObjects>
-        <!--Required object that handles lifetime events for the application-->
+    <!--<Application.ApplicationLifetimeObjects>
+        --><!--Required object that handles lifetime events for the application--><!--
         <shell:PhoneApplicationService 
             Launching="Application_Launching" Closing="Application_Closing" 
             Activated="Application_Activated" Deactivated="Application_Deactivated"/>
-    </Application.ApplicationLifetimeObjects>
+    </Application.ApplicationLifetimeObjects>-->
 
     
 
