--- a/UI/Searching.UI.WinClient/Views/RegistrationView.xaml
+++ b/UI/Searching.UI.WinClient/Views/RegistrationView.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="Searching.UI.WinClient.Forms.RegistrationForm"
+    x:Class="Searching.UI.WinClient.Views.RegistrationView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
