--- a/UI/Searching.UI.WinClient/Views/PostAnnView.xaml
+++ b/UI/Searching.UI.WinClient/Views/PostAnnView.xaml
@@ -19,15 +19,20 @@
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:Interactivity="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity">
 
+    <phone:PhoneApplicationPage.ApplicationBar>
+        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
+            <shell:ApplicationBarIconButton IconUri="/Images/DateTimePickerOk.png" Text="Ok"/>
+        </shell:ApplicationBar>
+    </phone:PhoneApplicationPage.ApplicationBar>
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent" Margin="0,0,0,-102">
+    <Grid x:Name="LayoutRoot" Background="Transparent" Margin="0,-64,0,-100">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="17*"/>
             <ColumnDefinition Width="461*"/>
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock x:Name="PageTitle" Text="Добавить Объявления" Margin="0,-4,0,-6" Style="{StaticResource PhoneTextTitle1Style}" Grid.ColumnSpan="2" Height="880" VerticalAlignment="Bottom" FontSize="40" Grid.Column="1"/>
-        <StackPanel Orientation="Vertical" Margin="10,62,0,100" Grid.ColumnSpan="2">
+        <TextBlock x:Name="PageTitle" Text="Добавить Объявления" Margin="0,0,0,759" Style="{StaticResource PhoneTextTitle1Style}" Grid.ColumnSpan="2" Height="53" VerticalAlignment="Bottom" FontSize="40" Grid.Column="1"/>
+        <StackPanel Orientation="Vertical" Margin="12,99,0,104" Grid.ColumnSpan="2">
             <telerikPrimitives:RadTextBox Header="Название" x:Name="radTextBox" Grid.Column="1" HorizontalAlignment="Left" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="468" Height="101"/>
             <telerikInput:RadListPicker Header="Список категорий">
                 <sys:String>Выберите категорию</sys:String>
@@ -45,7 +50,6 @@
                     </LinearGradientBrush>
                 </telerikPrimitives:RadMultiResolutionImage.Foreground>
             </telerikPrimitives:RadMultiResolutionImage>
-            <Button Height="68" HorizontalAlignment="Right" Width="188" Content="Применить"/>
         </StackPanel>
     </Grid>
 </phone:PhoneApplicationPage>
