--- a/UI/Searching.UI.WinClient/Views/RegistrationView.xaml
+++ b/UI/Searching.UI.WinClient/Views/RegistrationView.xaml
@@ -1,108 +1,43 @@
-﻿<phone:PhoneApplicationPage 
-    x:Class="Searching.UI.WinClient.Views.RegistrationView"
+﻿<phone:PhoneApplicationPage
+     x:Class="Searching.UI.WinClient.Views.RegistrationView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:telerikPrimitives="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Primitives"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:telerikPrimitives="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Primitives"
-    xmlns:telerikInput="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Input"
-    xmlns:telerikDataForm="clr-namespace:Telerik.Windows.Controls.DataForm;assembly=Telerik.Windows.Controls.Input"
-    xmlns:models="clr-namespace:Searching.UI.WinClient.Forms.Models"
-    xmlns:commands="clr-namespace:Searching.UI.WinClient.Forms.Commands"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
-    mc:Ignorable="d" d:DesignHeight="800" d:DesignWidth="480"
-    shell:SystemTray.IsVisible="False">
+    mc:Ignorable="d"
+    shell:SystemTray.IsVisible="True"
+    xmlns:cal="http://www.caliburnproject.org"
+    xmlns:caliburn="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro.Platform"
+    xmlns:Command="clr-namespace:GalaSoft.MvvmLight.Command;assembly=GalaSoft.MvvmLight.Platform"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    xmlns:Interactivity="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity">
 
-    <UserControl.Resources>
-        <commands:DataFormCommitCommand x:Key="DataFormCommitCommand"/>
-    </UserControl.Resources>
-
-    <Grid x:Name="LayoutRoot" Background="Transparent">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-
-        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock x:Name="ApplicationTitle" Text="CREATE ACCOUNT" Style="{StaticResource PhoneTextNormalStyle}"/>
+    <phone:PhoneApplicationPage.ApplicationBar>
+        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
+            <shell:ApplicationBarIconButton x:Name="Registration" IconUri="/Images/DateTimePickerOk.png" Text="Ok"/>
+        </shell:ApplicationBar>
+    </phone:PhoneApplicationPage.ApplicationBar>
+    <!--LayoutRoot is the root grid where all page content is placed-->
+    <Grid x:Name="LayoutRoot" Background="Transparent" Margin="0,-64,0,-100">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="17*"/>
+            <ColumnDefinition Width="461*"/>
+            <ColumnDefinition Width="2*"/>
+        </Grid.ColumnDefinitions>
+        <TextBlock x:Name="PageTitle" Text="Регистрация" Margin="0,0,0,759" Style="{StaticResource PhoneTextTitle1Style}" Grid.ColumnSpan="2" Height="53" VerticalAlignment="Bottom" FontSize="40" Grid.Column="1"/>
+        <StackPanel Grid.ColumnSpan="2" Margin="14,125,1,0">
+            <telerikPrimitives:RadTextBox x:Name="TakeMail"  Header="E-Mail:"/>
+            <telerikPrimitives:RadPasswordBox x:Name="TakePass"  Header="Пароль:" Margin="2,0,-2,0"/>
+            <telerikPrimitives:RadPasswordBox x:Name="CheckPass"  Header="Введите повторно пароль:"/>
+            <telerikPrimitives:RadTextBox x:Name="TakeName"  Header="Имя:"/>
+            <telerikPrimitives:RadTextBox x:Name="TakeLastName"  Header="Фамилия:"/>
         </StackPanel>
-
-        <Grid Grid.Row="1">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <telerikInput:RadDataForm Margin="12,-2,12,0" x:Name="DataForm" ValidatingDataField="OnDataFormValidatingDataField">
-                    <telerikInput:RadDataForm.CurrentItem>
-                        <models:SignUpExtendedDataModel/>
-                    </telerikInput:RadDataForm.CurrentItem>
-                    <Grid>
-                        <TextBlock Text="Personal information" Margin="12,0" Foreground="{StaticResource PhoneSubtleBrush}" FontFamily="{StaticResource PhoneFontFamilyNormal}" FontSize="{StaticResource PhoneFontSizeSmall}"/>
-                        <telerikInput:DataField Header="" TargetProperty="FirstName" Row="1">
-                            <telerikInput:DataField.EditorStyles>
-                                <Style TargetType="telerikPrimitives:RadTextBox">
-                                    <Setter Property="Watermark" Value="First Name"/>
-                                </Style>
-                            </telerikInput:DataField.EditorStyles>
-                            <telerikInput:DataField.Validators>
-                                <telerikInput:NonEmptyStringValidator/>
-                            </telerikInput:DataField.Validators>
-                        </telerikInput:DataField>
-                        <telerikInput:DataField Header="" TargetProperty="LastName" Row="2">
-                            <telerikInput:DataField.EditorStyles>
-                                <Style TargetType="telerikPrimitives:RadTextBox">
-                                    <Setter Property="Watermark" Value="Last Name"/>
-                                </Style>
-                            </telerikInput:DataField.EditorStyles>
-                            <telerikInput:DataField.Validators>
-                                <telerikInput:NonEmptyStringValidator/>
-                            </telerikInput:DataField.Validators>
-                        </telerikInput:DataField>
-                        <telerikInput:DataField Header="" TargetProperty="Email" Row="3">
-                            <telerikInput:DataField.EditorStyles>
-                                <Style TargetType="telerikPrimitives:RadTextBox">
-                                    <Setter Property="InputScope" Value="EmailNameOrAddress"/>
-                                    <Setter Property="Watermark" Value="Email Address"/>
-                                </Style>
-                            </telerikInput:DataField.EditorStyles>
-                            <telerikInput:DataField.Validators>
-                                <telerikInput:NonEmptyStringValidator/>
-                                <telerikInput:EmailValidator/>
-                            </telerikInput:DataField.Validators>
-                        </telerikInput:DataField>
-                        <TextBlock Text="Password" Margin="12,0" Grid.Row="4" Foreground="{StaticResource PhoneSubtleBrush}" FontSize="{StaticResource PhoneFontSizeSmall}"/>
-                        <telerikInput:DataField Header="" TargetProperty="Password" Row="5" telerikDataForm:PasswordField.IsPasswordField="True">
-                            <telerikInput:DataField.EditorStyles>
-                                <Style TargetType="telerikPrimitives:RadPasswordBox">
-                                    <Setter Property="Watermark" Value="Password"/>
-                                </Style>
-                            </telerikInput:DataField.EditorStyles>
-                            <telerikInput:DataField.Validators>
-                                <telerikInput:NonEmptyStringValidator/>
-                            </telerikInput:DataField.Validators>
-                        </telerikInput:DataField>
-                        <telerikInput:DataField Header="" TargetProperty="PasswordConfirm" Row="6" telerikDataForm:PasswordField.IsPasswordField="True">
-                            <telerikInput:DataField.EditorStyles>
-                                <Style TargetType="telerikPrimitives:RadPasswordBox">
-                                    <Setter Property="Watermark" Value="Retype Password"/>
-                                </Style>
-                            </telerikInput:DataField.EditorStyles>
-                            <telerikInput:DataField.Validators>
-                                <telerikInput:NonEmptyStringValidator/>
-                            </telerikInput:DataField.Validators>
-                        </telerikInput:DataField>
-                    </Grid>
-                </telerikInput:RadDataForm>
-                <Button Grid.Row="1" Content="sign up" Margin="12,24" CommandParameter="{Binding ElementName=DataForm}" Command="{StaticResource DataFormCommitCommand}"/>
-            </Grid>
-        </Grid>
     </Grid>
-
 </phone:PhoneApplicationPage>
